created code editor and header animation

--- a/lambda-deployer-frontend/src/components/CodeEditor/CodeEditor.module.scss
+++ b/lambda-deployer-frontend/src/components/CodeEditor/CodeEditor.module.scss
@@ -3,6 +3,7 @@
     border: 5px ridge black;
     box-shadow: inset 0 0 0 1px #eee;
     padding: 20px;
+    padding-top: 35px;
     margin-top: 1px;
     filter: brightness(1.5);
     &::selection{
@@ -55,7 +56,7 @@
             .code{
                 // min-height: 100%;
                 filter: brightness(1.05);
-                margin: 10px;
+                margin: 0px;
                 textarea {
                     outline: 1px solid black;
                     &::selection{
