created deployed functions UI

--- a/lambda-deployer-frontend/src/pages/DeployPanel/DeployPanel.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployPanel/DeployPanel.module.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: whitesmoke;
+    background-color: white;
     .head{
         text-align: center;
         color: white;
