--- a/lambda-deployer-frontend/src/components/Notebook/Notebook.module.scss
+++ b/lambda-deployer-frontend/src/components/Notebook/Notebook.module.scss
@@ -18,15 +18,19 @@
             outline: none;
             transition: background-color 0.3s ease;
             background-color: #7f7f7f;
+            // background-color: maroon;
             border-radius: 0px 20px 0px 0px;
             &:hover{
                 filter: brightness(1.2);
             }
         }
         .Tab-Selected {
-            border-bottom: 3px solid black;
+            border-bottom: 3px solid white;
             background-color: #3f3f3f;
             color: white;
+            &:nth-child(2){
+                border-bottom: 3px solid gray;                
+            }
         }
     }
     .TabPanel {
