created UI for deployed function and packages and provided UI for running already deployed functions

--- a/lambda-deployer-frontend/src/components/CodeTab/components/TabButton/TabButton.module.scss
+++ b/lambda-deployer-frontend/src/components/CodeTab/components/TabButton/TabButton.module.scss
@@ -28,11 +28,11 @@
             font-size: larger;
             place-items: center;
             position: absolute;   
-            border-radius: 10px;
+            border-radius: 2px;
             text-align: center;
             transition: background-color 0.3s ease , font-size 0.3s ease;
             &:hover{
-                background-color: #222;
+                background-color: rgba($color: gray, $alpha: 0.5);
                 font-size: x-large;
             }
         }
