--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
@@ -1,20 +1,28 @@
+.DeploymentCover{
+    padding: 5px;
+    overflow: hidden;
+    box-shadow: 0px 0px 2px 2px cyan;
+}
 .Deployment{
     display: grid;
     padding: 10px;
-    box-shadow: 0px 0px 2px 2px cyan;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: min-content;
     background-color: rgb(2, 40, 40);
     border-radius: 10px;
     height: 330px;
     width: 500px;
-    margin: 30px;
+    margin: 30px ;
     grid-gap: 10px;
     overflow: auto;
     scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
-    margin-right: calc( 100vw / 10);
-    margin-left: calc( 100vw / 10);
+    scroll-snap-type: y proximity;
+    & > *{
+        scroll-snap-align: start;
+        scroll-padding-top: -10px;
+    }
+    // margin-right: calc( 100vw / 10);
+    // margin-left: calc( 100vw / 10);
     /* Define the scrollbar track */
     &::-webkit-scrollbar-track {
         background-color: transparent;
@@ -34,6 +42,7 @@
     
     /* Hide the scrollbar when not in use */
     &::-webkit-scrollbar {
+        display: none;
         width: 5px;
         height: 5px;
     }
