--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/FunctionMini/FunctionMini.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/FunctionMini/FunctionMini.module.scss
@@ -27,6 +27,7 @@
         color: white;
         overflow: hidden;
         text-overflow: ellipsis;
+        word-break: break-all;
     }
     .hoverUpMenu{
         position: absolute;
