deployed packages and URI caller

--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/DeployedFunctionPanel.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/DeployedFunctionPanel.module.scss
@@ -1,6 +1,6 @@
 .DeployedFunctionPanel{
     height: 90vh;
-    background-color: #222;
+    background-color: rgb(13, 17, 23);
     display: grid;
     overflow: auto;
     grid-auto-flow: column;
