--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Bottom/Bottom.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Bottom/Bottom.module.scss
@@ -38,6 +38,19 @@
         height: 100%;
         padding: 5px 15px;
         text-align: justify;
-        white-space: pre-line;
+        white-space: pre;
+        position: relative;
+        border: 3px solid rgb(222, 153, 25);
+        &::before{
+            content: "";
+            display: block;
+            height: 100%;
+            position: absolute;
+            left: 4px;
+            background-color: red;
+            width: 3px;
+            z-index: 100;
+            overflow: hidden;
+          }
     }
 }
