--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Top/Top.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Top/Top.module.scss
@@ -59,6 +59,7 @@
                     }                    
                 }
             }
+
             .run{
                 background-color: darkgreen;
                 cursor: pointer;
@@ -67,6 +68,13 @@
                 border-radius: 5px;
                 &:active{
                     box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
+                }
+            }
+            .running{
+                opacity: 0.5;
+                cursor: progress;
+                &:active{
+                    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.25);
                 }
             }
         }
