--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
@@ -1,19 +1,42 @@
 .DeploymentCover{
-    padding: 5px;
+    border-radius: 5px;
+    border: 0.2px solid darkgray;
     overflow: hidden;
-    box-shadow: 0px 0px 2px 2px cyan;
+    display: flex;
+    flex-flow: column nowrap;
+    place-content: center;
+    .DeploymentTitle{
+        padding: 5px;
+        background-color: #171515;
+        color: white;
+        height: 3em;
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100%;
+        place-content: center;
+        place-items: center;
+        .packageName{
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin: 0;
+            padding: 0;
+            margin-left: 10px;
+            margin-right: auto;
+            color: #fff;
+        }
+
+        .rightHead{
+            font-size: 0.8rem;
+            &>*{
+
+                font-family: 'Roboto', sans-serif;
+            }
+        }
+    }
 }
 .Deployment{
-    display: grid;
-    padding: 10px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: min-content;
-    background-color: rgb(2, 40, 40);
     border-radius: 10px;
-    height: 330px;
-    width: 500px;
-    margin: 30px ;
-    grid-gap: 10px;
+    width: 70vw;
     overflow: auto;
     scroll-behavior: smooth;
     scroll-snap-type: y proximity;
@@ -21,9 +44,7 @@
         scroll-snap-align: start;
         scroll-padding-top: -10px;
     }
-    // margin-right: calc( 100vw / 10);
-    // margin-left: calc( 100vw / 10);
-    /* Define the scrollbar track */
+
     &::-webkit-scrollbar-track {
         background-color: transparent;
         border-radius: 5px;
