--- a/lambda-deployer-frontend/src/pages/Home/Header/Header.module.scss
+++ b/lambda-deployer-frontend/src/pages/Home/Header/Header.module.scss
@@ -8,7 +8,9 @@
     height: 4em;
     display: block;
     box-shadow: 0 6px 6px -6px black;
-    position: relative;
+    position: sticky;
+    z-index: 1000000;
+    top:0;
     background-color: white;
     display: flex;
     gap: 50px;
