--- a/lambda-deployer-frontend/src/components/SelectionBox/SelectionBox.module.scss
+++ b/lambda-deployer-frontend/src/components/SelectionBox/SelectionBox.module.scss
@@ -7,12 +7,13 @@
     max-height: calc(100vh - 120px);
     min-height: 200px;
     min-width: 250px;
-    background-color: white;
+    background-color: rgb(26, 33, 6);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     z-index: 2;
     padding-bottom: 5px;
     overflow: hidden;
+    color:white;
     &.minimized {
       height: 40px;
       max-height: 40px;
@@ -32,7 +33,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 10px;
-      background-color: #f3f3f3;
+      background-color: rgb(36, 43, 53);
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
       user-select: none;
@@ -55,6 +56,7 @@
         margin: 0;
         font-size: 13px;
         font-weight: bold;
+        color:whitesmoke;
       }
   
       .minimizeButton {
@@ -63,7 +65,7 @@
         align-items: center;
         border: none;
         background-color: transparent;
-        color: black;
+        color: whitesmoke;
         font-size: 16px;
         cursor: pointer;
   
@@ -101,7 +103,8 @@
       cursor: pointer;
       border-bottom: 2px solid lightgray;
       &:hover {
-        background-color: #f3f3f3;
+        // background-color: #f3f3f3;
+        filter: brightness(1.4);
       }
       .removeMenu{
         margin-left: auto;
