--- a/lambda-deployer-frontend/src/pages/Home/Header/Header.module.scss
+++ b/lambda-deployer-frontend/src/pages/Home/Header/Header.module.scss
@@ -9,7 +9,7 @@
     display: block;
     box-shadow: 0 6px 6px -6px black;
     position: sticky;
-    z-index: 1000000;
+    z-index: 10000;
     top:0;
     background-color: white;
     display: flex;
