--- a/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
+++ b/lambda-deployer-frontend/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
@@ -1,10 +1,80 @@
 .DeploymentCover{
-    border-radius: 5px;
-    border: 0.2px solid darkgray;
-    overflow: hidden;
-    display: flex;
-    flex-flow: column nowrap;
-    place-content: center;
+    padding-top: 30px;
+    position: relative;
+    .headMenu{
+        position: absolute;
+        height: 30px;
+        bottom: calc(100% - 30px);
+        right: 0;
+        top: 0.8px;
+        overflow: hidden;
+        min-width: 30%;
+        // box-shadow: 0 3px 0.3px 0px #171515;
+        z-index: 1;
+        padding:0;
+        padding-left: 30px;
+        box-sizing: border-box;
+        .skewed{
+            position: absolute;
+            top: 0;
+            left: 0px;
+            overflow: hidden;
+            height: 200%;
+            aspect-ratio: 1;
+            transform: skewY(-45deg);
+            background-color: #171515;
+            border: none;
+            border-top: 2px solid darkgray;
+            border-bottom: 0.2px solid darkgray;
+        }
+        .headTools{
+            display: flex;
+            padding: 0 10px;
+            flex-flow: row-reverse nowrap;
+            border: none;
+            border: 0.2px solid darkgray;
+            height: 100%;
+            border: 0.2px solid darkgray;
+            position: relative;
+            border-left: none;
+            border-bottom: none;
+            background-color: #171515;
+            place-items: center;
+            & > *{
+                padding: 5px 5px;
+                border: none;
+                border: 0.2px solid darkgray;
+                border-radius: 2px;
+                background-color: #171515;
+                color: white;
+                font-size: 0.8rem;
+                font-family: 'Roboto', sans-serif;
+                gap: 5px;
+                cursor: pointer;
+                border: 0;
+                width: 1em;
+                height: 1em;
+                &:hover{
+                    background-color: #2c7a8e;
+                }
+            }
+            .removePackage{
+                &:hover{
+                    background-color: red;
+                }
+            }
+        }
+    }
+    .body{
+        border-radius: 1px;
+        border-top-right-radius: 0;
+        border: 0.2px solid darkgray;
+        display: flex;
+        flex-flow: column nowrap;
+        place-content: center;
+        position: relative;
+        z-index: 0;
+    }
     .DeploymentTitle{
         padding: 5px;
         background-color: #171515;
@@ -33,6 +103,28 @@
             }
         }
     }
+    ::-webkit-scrollbar-track {
+        background-color: transparent;
+        border-radius: 5px;
+    }
+    
+    /* Define the scrollbar thumb */
+    ::-webkit-scrollbar-thumb {
+        background-color: #2c7a8e;
+        border-radius: 5px;
+    }
+    
+    /* Define the scrollbar thumb on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #107892;
+    }
+    
+    /* Hide the scrollbar when not in use */
+    ::-webkit-scrollbar {
+        display: none;
+        width: 5px;
+        height: 5px;
+    }
 }
 .Deployment{
     border-radius: 10px;
@@ -45,28 +137,6 @@
         scroll-padding-top: -10px;
     }
 
-    &::-webkit-scrollbar-track {
-        background-color: transparent;
-        border-radius: 5px;
-    }
-    
-    /* Define the scrollbar thumb */
-    &::-webkit-scrollbar-thumb {
-        background-color: #2c7a8e;
-        border-radius: 5px;
-    }
-    
-    /* Define the scrollbar thumb on hover */
-    &::-webkit-scrollbar-thumb:hover {
-        background-color: #107892;
-    }
-    
-    /* Hide the scrollbar when not in use */
-    &::-webkit-scrollbar {
-        display: none;
-        width: 5px;
-        height: 5px;
-    }
 }
 
 .animateToMiddle{
