--- a/lambda-deployer-frontend/src/pages/Home/Home.module.scss
+++ b/lambda-deployer-frontend/src/pages/Home/Home.module.scss
@@ -25,7 +25,7 @@
     
     /* Hide the scrollbar when not in use */
     &::-webkit-scrollbar {
-        width: 10px;
+        display: none;
     }
 }
 
