--- a/lambda-deployer-frontend/src/pages/Home/Home.module.scss
+++ b/lambda-deployer-frontend/src/pages/Home/Home.module.scss
@@ -6,7 +6,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: #222;
+    background-color: white;
     &::-webkit-scrollbar-track {
         background-color: transparent;
         border-radius: 10px;
