--- a/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
+++ b/src/pages/DeployedFunctionPanel/components/Deployment/Deployment.module.scss
@@ -88,10 +88,8 @@
         .packageName{
             font-size: 1.5rem;
             font-weight: 600;
-            margin: 0;
             padding: 0;
-            margin-left: 10px;
-            margin-right: auto;
+            margin: auto;
             color: #fff;
         }
 
