used redux for deployments, created function naming

--- a/src/components/RightPanel/RightPanel.module.scss
+++ b/src/components/RightPanel/RightPanel.module.scss
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    height: calc(100vh - 52px);
+    height: 100vh;
     width: calc(100vw - 50px);
     max-width: 500px;
     background-color: white;
