--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,21 @@ body {
   height: 0;
 }
 
-.primary-border {
+/* .primary-border {
   border-radius: 4px;
   border: 1px solid #C2C2C2;
-}
+} */
 
 .function-variable:focus{
   padding-left: 2px;
   padding-right: 2px;
   outline: 2px solid darkcyan;
   user-select: none;
+}
+
+@layer components{
+  .primary-border {
+    border-radius: 4px;
+    border: 1px solid #C2C2C2;
+  }
 }
