--- a/src/pages/Home/WorkBox/WorkBox.module.scss
+++ b/src/pages/Home/WorkBox/WorkBox.module.scss
@@ -10,4 +10,8 @@
     &::-webkit-scrollbar {
         display: none;
     }
+    @media screen and (max-width: 600px) {
+        flex-direction: column;
+        overflow: auto;
+    }
 }
