--- a/src/pages/DeployedFunctionPanel/DeployedFunctionPanel.module.scss
+++ b/src/pages/DeployedFunctionPanel/DeployedFunctionPanel.module.scss
@@ -58,6 +58,15 @@
             color: red;
         }
     }
+
+    @media screen and (max-width: 700px) {
+        overflow: auto;
+        padding-left: 10px;
+        text-align: center;
+        .NoDeploymentText{
+            font-size: 2rem;
+        }
+    }
     .try{
         color: darkcyan;
         font-size: 2rem;
